<resources>
    <string name="app_name">K224111493Practice</string>
    <string name="title_login">Login</string>
    <string name="title_login_username">User Name:</string>
    <string name="title_login_username_hint">Enter username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_password_hint">Enter password</string>
    <string name="title_save_login_info">Save login information</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_login_password_new">Password:</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_confirm_exit_title">Confirm exit</string>
    <string name="title_confirm_exit_message">Are you sure want to exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">Cancel</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_result">Result</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product" />
    <string name="title_advanced_product_main">Advanced Product\n</string>
    <string name="title_create_new_customer">New customer</string>
    <string name="title_broadcast_advertising">Broadcast advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer name:</string>
    <string name="title_customer_email">Customer email</string>
    <string name="title_customer_phone">Customer phone</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="product_image" />
    <string name="product_id" />
    <string name="product_name">Product name</string>
    <string name="quality">Quality</string>
    <string name="price">Price</string>
    <string name="category_id" />
    <string name="title_category_id">Category ID</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_detail">Product Detail\n</string>
    <string name="title_create_new_product">New product\n</string>
    <string name="title_search_product">Search product</string>
    <string name="title_payment_method">Payment Method\n</string>
    <string name="title_order">Orders</string>
    <string name="title_main_contact">Contact</string>
    <string name="title_phone">Phone:</string>
    <string name="title_body_sms">Body SMS:</string>
    <string name="title_multi_threading">Multi Threading</string>
    <string name="title_handler_send_message">HANDLER SEND MESSAGE</string>
    <string name="title_handler_post_message">HANDLER POST MESSAGE</string>
    <string name="title_asynctask">ASYNCTASK</string>
    <string name="title_number">5000</string>
    <string name="title_handle_draw">DRAW</string>
    <string name="title_number_contact">Number Of Contact</string>
    <string name="title_create_contact">CREATE CONTACT</string>
    <string name="title_async_task_header">Enter number of button</string>
    <string name="title_async_task_draw">Draw</string>
    <string name="title_button_insert_contact">INSERT CONTACT</string>
    <string name="title_back">Back</string>
    <string name="title_update">Update</string>
    <string name="title_delete">Delete</string>

</resources>