<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerDetailActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/title_customer_detail"
        android:textAlignment="center"
        android:textColor="#087189"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_customer_id"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_customer_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_customer_email"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_customer_phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_login_username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginStart="5dp"
        android:text="@string/title_login_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_customer_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#87CEE6"
            android:text="@string/title_new"
            android:textColor="#087189"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#87CEE6"
            android:text="@string/title_save"
            android:textColor="#087189"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#87CEE6"
            android:text="@string/title_remove"
            android:textColor="#087189"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>