<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MultiThreadingCategoriesActivity">

    <Button
        android:onClick="openHandlerSendMessageActivity"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_rounded"
        android:backgroundTint="#87CEE6"
        android:text="@string/title_handler_send_message"
        android:textSize="20sp" />

    <Button
        android:onClick="openHandlePostMessageActivity"
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_rounded"
        android:backgroundTint="#87CEE6"
        android:text="@string/title_handler_post_message"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_rounded"
        android:backgroundTint="#87CEE6"
        android:text="@string/title_asynctask"
        android:textSize="20sp" />
</LinearLayout>