<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee" />

                    <TextView
                        android:id="@+id/txtEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_main_employee"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_customer" />

                    <TextView
                        android:id="@+id/txtCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_main_customer"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_category" />

                    <TextView
                        android:id="@+id/txtCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_category"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProducts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_product" />

                    <TextView
                        android:id="@+id/txtProducts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_product"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_products" />

                    <TextView
                        android:id="@+id/txtProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_product"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgAdvancedProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_advanced_product" />

                    <TextView
                        android:id="@+id/txtAdvancedProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_advanced_product_main"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgPaymentMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_paymentmthod" />

                    <TextView
                        android:id="@+id/txtPaymentMethod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_payment_method"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_order" />

                    <TextView
                        android:id="@+id/txtOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_order"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_contact" />

                    <TextView
                        android:id="@+id/txtContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_main_contact"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMultiThreading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_multi_threading" />

                    <TextView
                        android:id="@+id/txtMultiThreading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_multi_threading"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMultiThreadingAsyncTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_multi_threading" />

                    <TextView
                        android:id="@+id/txtMultiThreadingAsyncTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_multi_threading"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgContactFirebase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_multi_threading" />

                    <TextView
                        android:id="@+id/txtContactFirebase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/title_multi_threading"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>



            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>
